# TheSnakeGame

./: .gitignore  README.md
CppReforgedVersion/: CMakeLists.txt  ControlsScreen.hpp  GameScreen.hpp  GlobalTypes.hpp  Logger.hpp  MenuScreen.hpp  Screen.hpp  ScreenRenderer.cpp  ScreenRenderer.hpp  Snake.cpp  Snake.hpp  TerminalAPI.cpp  TerminalAPI.hpp  Timer.hpp  UserInput.cpp  UserInput.hpp  main.cpp  run  runDEBUG  runRELEASE
CppReforgedVersion/src/: CMakeLists.txt  ControlsScreen.hpp  GameScreen.hpp  Log.cpp  Log.hpp  MenuScreen.hpp  Screen.hpp  Snake.cpp  Snake.hpp  TODO.txt  TerminalAPI.cpp  TerminalAPI.hpp  main.cpp
Cversion/: CMakeLists.txt  main.c  myGame.h  run
